added model for codes
code input and check is fully working
download is working

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -41,6 +41,9 @@ de:
         unit: "€"
         separator: ","
         delimiter: "."
+    human:
+      format:
+        separator: ","
   i18n:
     transliterate:
       rule:
